Changelog for miniShop.

1.5.0 beta (22.04.2012)
=============
- Добавлено создание галереи товара.
- Новый сниппет msGetGallery для вывода изображений товара (поддерживает getPage).
- [#30] Добавлено окно об ошибке при создании товара.
- [#34] Чанки в ModStatus сохраняются не по имени, а по ID.
- [#35] Выбор чанков и сниппетов в комбобоксах поддерживает автодополнение.
-----
- Added gallery for goods
- New snippet msGetGallery to display product images (supports getPage)
- [#30] Added an error window when creating a product.
- [#34] Chunks in ModStatus are saved by ID.
- [#35] The choice of chunks, and snippets in the combobox supports autocompletion.

1.4.0 beta (13.04.2012)
=============
- Добавлено упрощенное редактирование ТВ параметров прямо в окне редактирования товара. 
- Добавлено изменение товаров в заказе: добавление, редактирование и удаление.
- Возможность изменения в заказе способа доставки и оплаты.
- При редактировании в окнах активные вкладки запоминаются.
- Картинки в списке товаров теперь сжимаются phpthumb.
-----
- Added simplified editing of TV parameters directly in the editing of the goods.
- Added modifying ordered goods in the order window: adding, editing and deleting.
- Added changing the method of delivery and payment of the order.
- When editing in windows active tabs are remembered.
- Images from the list of goods is now compressed by phpthumb.

1.3.3 beta (10.04.2012)
=============
- [#25] Исправлена ошибка с сохранением свойства remains у товара.
-----
- [#25] Fixed bug with saving remains in goods.

1.3.2 beta (09.04.2012)
=============
- Товарам добавлено свойство "вес".
	- Новый системный параметр getweight_snippet. Можно указать сниппет (по типу msGetPrice), который примет объект ресурса и выдаст его вес. По умолчанию - нет, выдается вес из ModGoods.
	- Изменены чанки корзины и песем для поддержки нового свойства товаров.