@@ -1,0 +1,5 @@
+<li>
+	<a rel="fancybox" href="[[+file]]" class="thumbnail">
+		<img class="fancybox thumbnail" src="[[+file:phpthumbof=`&w=150&h=100&zc=0`]]" alt="Кликните для увеличения" title="[[+name]]" />
+	</a>
+</li>
