@@ -8,6 +8,7 @@ $outputSeparator = $modx->getOption('outputSeparator', $scriptProperties, "\n");
 $totalVar = $modx->getOption('totalVar', $scriptProperties, 'total');
 $sortby = $modx->getOption('sortby', $scriptProperties, 'id');
 $sortdir = $modx->getOption('sortdir', $scriptProperties, 'ASC');
+$onlyImg = isset($onlyImg) ? $onlyImg : 1;
 
 if (!isset($modx->miniShop) || !is_object($modx->miniShop)) {
   $modx->miniShop = $modx->getService('minishop','miniShop', $modx->getOption('core_path').'components/minishop/model/minishop/', $scriptProperties);
@@ -19,7 +20,14 @@ if (!$modx->getCount('modResource', $id)) {return $modx->lexicon('ms.goods.err_n
 
 $arr = array();
 $q = $modx->newQuery('ModGallery');
-$q->where(array('gid' => $id, 'wid' => $_SESSION['minishop']['warehouse']));
+$q->andCondition(array('gid' => $id, 'wid' => $_SESSION['minishop']['warehouse']), '', 0);
+if ($onlyImg) {
+	$extensions = explode(',',$modx->getOption('upload_images'));
+	$tmp = array();
+	foreach ($extensions as $v) {
+		$q->orCondition(array('file:LIKE' => '%.'.$v), '', 1);
+	}
+}
 
 $total = $modx->getCount('ModGallery', $q);
 $modx->setPlaceholder($totalVar, $total);
@@ -27,6 +35,7 @@ $modx->setPlaceholder($totalVar, $total);
 $q->sortby($sortby,$sortdir);
 if (!empty($limit)) {$q->limit($limit,$offset);}
 $gallery = $modx->getCollection('ModGallery', $q);
+
 
 $result = array();
 foreach ($gallery as $v) {
