@@ -4,12 +4,14 @@ Changelog for miniShop.
 =============
 - Добавлено создание галереи товара.
 - Новый сниппет msGetGallery для вывода изображений товара (поддерживает getPage).
+- Новый чанк msGallery.row.tpl для оформления вывода изображений.
 - [#30] Добавлено окно об ошибке при создании товара.
 - [#34] Чанки в ModStatus сохраняются не по имени, а по ID.
 - [#35] Выбор чанков и сниппетов в комбобоксах поддерживает автодополнение.
 -----
 - Added gallery for goods
 - New snippet msGetGallery to display product images (supports getPage)
+- New chunk msGallery.row.tpl for templating images of product.
 - [#30] Added an error window when creating a product.
 - [#34] Chunks in ModStatus are saved by ID.
 - [#35] The choice of chunks, and snippets in the combobox supports autocompletion.
